<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightSchedule</string>
    <string name="action_settings">Menuitem</string>
    <string name="font_fontFamily_medium">sans-serif</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Light Schedule</string>
    <string name="title_activity_add_lesson">Add Lesson</string>

    <!-- add activity -->
    <string name="hello_world">Hello world!</string>
    <string name="lesson_name">Lesson Title</string>
    <string name="classroom">Classroom</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="section_of_lesson">Section of lesson</string>
    <string name="day_of_week">Day of Week</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="is_tiny_lesson">is tiny lesson</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="is_alternate_weeks">is alternate weeks</string>
    <string name="odd">Odd</string>
    <string name="even">Even</string>
    <string name="action_add">add</string>
    <string name="action_modify">modify</string>
    <string name="action_finish_modify">finish</string>
    <string name="modify_lesson">Modify lesson</string>
    <string name="view_lesson">View Lesson</string>


</resources>
