<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.leafli7.lightschedule.Activity.AddLessonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <include layout="@layout/toolbar_actionbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_right"
            android:layout_marginRight="@dimen/margin_left_right"
            android:layout_marginTop="@dimen/margin_top_bottom"
            android:orientation="vertical">

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/lesson_name" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etLessonTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lesson_name" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_width" />


            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/classroom" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etClassroom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/classroom" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_width" />


            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/teacher_name" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etTeacherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/teacher_name" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_width" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_of_lesson" />

                    <Spinner
                        android:id="@+id/spLessonTimeNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_of_week" />

                    <Spinner
                        android:id="@+id/spDayOfWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></Spinner>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_width" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from" />

                    <Spinner
                        android:id="@+id/spStartWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to" />

                    <Spinner
                        android:id="@+id/spEndWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></Spinner>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_width" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbIsTinyLesson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_tiny_lesson" />

                <RadioGroup
                    android:id="@+id/rgIsTinyLesson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <RadioButton
                        android:id="@+id/rbFirst"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/first" />

                    <RadioButton
                        android:id="@+id/rbSecond"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/second" />

                </RadioGroup>


            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_width" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbIsSingleWeekLesson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_alternate_weeks" />

                <RadioGroup
                    android:id="@+id/rgIsSingleWeekLesson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <RadioButton
                        android:id="@+id/rbOdd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/odd" />

                    <RadioButton
                        android:id="@+id/rbEven"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/even" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
